...
    <!-- Non translatable -->
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="stop" translatable="false">Stop</string>

    <!-- Translatable -->
    <string name="app_name">Youpidapp</string>
    <string name="home">Accueil</string>
    <string name="type">Type de lecture</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="search">Rechercher</string>

    <!-- Discotheque -->
    <string-array name="types">
        <item>@string/type1</item>
        <item>@string/type2</item>
        <item>@string/type3</item>
        <item>@string/type4</item>
    </string-array>
    <string name="type1">1 seul à la fois</string>
    <string name="type2">En même temps</string>
    <string name="type3">Un après l\'autre</string>
    <string name="type4">Boucler le son</string>

...
    <string name="submit_a_sound">Soumettez nous un son via le formulaire ci-dessous.</string>
    <string name="submit_a_bug">Faites nous part d\'un bug via le formulaire ci-dessous.</string>
    <string name="submit_a_feedback">Donnez nous un feedback, ou demandez nous une nouvelle feature via le formulaire ci-dessous.</string>

    <!-- Themas -->
    <string-array name="theme_modes">
        <item>@string/day_mode</item>
        <item>@string/night_mode</item>
    </string-array>
    <string name="night_mode">Thème sombre</string>
    <string name="day_mode">Thème clair</string>
</resources>
